[project]
name = "pageindex-rag"
version = "0.1.0"
description = "Local RAG system using PageIndex + MLX for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hemanth"}
]
keywords = ["rag", "pageindex", "mlx", "llm", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mlx-lm",
    "pageindex",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
pageindex-rag = "pageindex_rag.cli:main"
pageindex-rag-server = "pageindex_rag.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
]
